--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
 
   
-      Маленький миленький аквариум с Бульбозавром.<div></div>(─‿‿─)♡
+      Маленький миленький аквариум с Бульбозавром.<div></div>(─‿‿─)♡<div></div>Стекло сделано очень реалистично.
 
 
 
@@ -287,13 +287,4 @@
     <!-- Тут заканчивается шаблон для Sketchfab -->
 
 
-
-
-
-
-
-
-
-
-    
-  
+</div><script src="https://code.jquery.com/jquery-2.1.1.min.js"></script><script src="js/materialize.js"></script><script src="js/init.js"></script></body></html>
