--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
 
 
-          Напишите о своих работах, что вы сделали
+          в моем портфолио представлены-анимации, рендеры и интерьеры.
+          
 
 
 
